# infonomy-demo

./: demo.ipynb  pyproject.toml
