[project]
name = "infonomy-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "infonomy-client",
    "ipykernel>=6.30.1",
    "prompt-toolkit>=3.0.51",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "typing-extensions>=4.14.1",
]

[tool.uv.sources]
infonomy-client = { path = "../infonomy-client", editable = true }
